--- a/index.htm
+++ b/index.htm
@@ -117,9 +117,29 @@
         <input class="height" type="radio" name="travel" value="Yes" ><span>Yes</span>
         <input class="height" type="radio" name="travel" value="No"><span>No</span>
        </div>
+         <div>
+        <label for="stress">11. Do you have any kind of stress? </label>
+        <input class="height" type="radio" name="stress" value="Yes" ><span>Yes</span>
+        <input class="height" type="radio" name="stress" value="No"><span>No</span>
+       </div>
+            <div>
+        <label for="sleep">12. Are you having proper sleep every day? </label>
+        <input class="height" type="radio" name="sleep" value="Yes" ><span>Yes</span>
+        <input class="height" type="radio" name="sleep" value="No"><span>No</span>
+        </div>
+            <div>
+        <label for="anger">13. Been angered beacause of things that happened that were out of your control? </label>
+        <input class="height" type="radio" name="anger" value="Yes" ><span>Yes</span>
+        <input class="height" type="radio" name="anger" value="No"><span>No</span>
+        </div>
+            <div>
+        <label for="diet">14. Are you taking healthy diet? </label>
+        <input class="height" type="radio" name="diet" value="Yes" ><span>Yes</span>
+        <input class="height" type="radio" name="diet" value="No"><span>No</span>
+        </div>
        <div class="textarea">
            <div>
-            <label for="more" >11. Did you like my Covid-19 Self Assessment Website ?</label>
+            <label for="more" >15. Did you like my Covid-19 Self Assessment Website ?</label>
            </div>
            <div>
             <textarea id="more" cols="100" rows="10" name="views"></textarea>
