--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="heading">
-        <h1>Covid Health Assessment Test
+        <h1>Covid Self-Assessment Test
         </h1>
     </div>
     
