--- a/index.htm
+++ b/index.htm
@@ -55,20 +55,26 @@
         <input class="height" type="checkbox" id="Sore throat" name="Sore throat">
         <label for="Sore throat">Sore throat</label>
         <br>
+        <input class="height" type="checkbox" id="diarrhoea" name="diarrhoea">
+        <label for="diarrhoea">diarrhoea</label>
+        <br>
+        <input class="height" type="checkbox" id="conjunctivitis" name="conjunctivitis">
+        <label for="conjunctivitis">conjunctivitis</label>
+        <br>
         <input class="height" type="checkbox" id="Headache" name="Headache">
         <label for="Headache">Headache</label>
         <br>
         <input class="height" type="checkbox" id="Loss of taste or smell" name="Loss of taste or smell">
         <label for="Loss of taste or smell">Loss of taste or smell</label>
         <br>
-        <input class="height" type="checkbox" id="A rash on skin" name="A rash on skin">
-        <label for="A rash on skin">A rash on skin</label>
+        <input class="height" type="checkbox" id="A rash on skin, or discolouration of fingers or toes." name="A rash on skin, or discolouration of fingers or toes.">
+        <label for="A rash on skin, or discolouration of fingers or toes.">A rash on skin, or discolouration of fingers or toes.</label>
         <br>
         <input class="height" type="checkbox" id="Difficulty breathing or shortness of breath" name="Difficulty breathing or shortness of breath">
         <label for="Difficulty breathing or shortness of breath">Difficulty breathing or shortness of breath</label>
         <br>
-        <input class="height" type="checkbox" id="Chest pain" name="Chest pain">
-        <label for="Chest pain">Chest pain</label>
+        <input class="height" type="checkbox" id="Chest pain or pressure" name="Chest pain or pressure">
+        <label for="Chest pain or pressure">Chest pain or pressure</label>
         <br>
         <input class="height" type="checkbox" id="Loss of speech or movement" name="Loss of speech or movement">
         <label for="Loss of speech or movement">Loss of speech or movement</label>
