--- a/index.htm
+++ b/index.htm
@@ -55,11 +55,11 @@
         <input class="height" type="checkbox" id="Sore throat" name="Sore throat">
         <label for="Sore throat">Sore throat</label>
         <br>
-        <input class="height" type="checkbox" id="diarrhoea" name="diarrhoea">
-        <label for="diarrhoea">diarrhoea</label>
+        <input class="height" type="checkbox" id="Diarrhoea" name="Diarrhoea">
+        <label for="Diarrhoea">Diarrhoea</label>
         <br>
-        <input class="height" type="checkbox" id="conjunctivitis" name="conjunctivitis">
-        <label for="conjunctivitis">conjunctivitis</label>
+        <input class="height" type="checkbox" id="Conjunctivitis" name="Conjunctivitis">
+        <label for="Conjunctivitis">Conjunctivitis</label>
         <br>
         <input class="height" type="checkbox" id="Headache" name="Headache">
         <label for="Headache">Headache</label>
