--- a/index.htm
+++ b/index.htm
@@ -143,7 +143,18 @@
         <input class="height" type="radio" name="diet" value="Yes" ><span>Yes</span>
         <input class="height" type="radio" name="diet" value="No"><span>No</span>
         </div>
-       <div class="textarea">
+        <div>
+        To prevent infection and to slow transmission of COVID-19, do the following:
+
+        Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.
+        Maintain at least 1 metre distance between you and people coughing or sneezing.
+        Avoid touching your face.
+        Cover your mouth and nose when coughing or sneezing.
+        Stay home if you feel unwell.
+        Refrain from smoking and other activities that weaken the lungs.
+        Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people.
+             </div>
+        <div class="textarea">
            <div>
             <label for="more" >15. Did you like my Covid-19 Self Assessment Website ?</label>
            </div>
