--- a/index.htm
+++ b/index.htm
@@ -144,15 +144,15 @@
         <input class="height" type="radio" name="diet" value="No"><span>No</span>
         </div>
         <div>
-        To prevent infection and to slow transmission of COVID-19, do the following:
+        15.Precautions that you must take:
 
-        Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.
-        Maintain at least 1 metre distance between you and people coughing or sneezing.
-        Avoid touching your face.
-        Cover your mouth and nose when coughing or sneezing.
-        Stay home if you feel unwell.
-        Refrain from smoking and other activities that weaken the lungs.
-        Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people.
+        (1)Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.
+        (2)Maintain at least 1 metre distance between you and people coughing or sneezing.
+        (3)Avoid touching your face.
+        (4)Cover your mouth and nose when coughing or sneezing.
+        (5)Stay home if you feel unwell.
+        (6)Refrain from smoking and other activities that weaken the lungs.
+        (7)Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people.
              </div>
         <div class="textarea">
            <div>
