--- a/index.htm
+++ b/index.htm
@@ -145,14 +145,14 @@
         </div>
         <div>
            <label >11. Precautions that you must take:</label>
-        <p>(1) Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.</p>
+        <p><b>(1) Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.</p>
         <p>(2) Maintain at least 1 metre distance between you and people coughing or sneezing.</p>
         <p>(3) Avoid touching your face.</p> 
         <p>(4) Cover your mouth and nose when coughing or sneezing.</p> 
         <p>(5) Stay home if you feel unwell.</p>
         <p>(6) Refrain from smoking and other activities that weaken the lungs.</p> 
         <p>(7) Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people.</p> 
-            </p>    
+            </b></p>    
     </div>
         <div class="textarea">
            <div>
